# ACT

./: .gitattributes  .gitignore  CONTEXT_INSIGHTS.md  DISCOVERIES.md  README.md  readme.md
conversations/: 2025-01-17-energy-economy-implementation.md
core-spec/: agent-pairing.md  human-lct-binding.md  permission-model.md  ui-requirements.md
demo-society/: README.md
implementation/: SOCIETY_POOL_IMPLEMENTATION.md
implementation/ledger/: .gitignore  ACT_COMPLETION_PROOF.md  ACT_FINAL_REPORT.md  ACT_PROTOCOL.md  ACT_USER_GUIDE.md  BUILD_STATUS.md  CLAUDE.md  ENERGY_CYCLE_IMPLEMENTATION.md  FEDERATION_COMPLETE.md  FEDERATION_GUIDE.md  FEDERATION_PHILOSOPHY.md  FEDERATION_SUCCESS.md  IMPLEMENTATION_SUMMARY.md  META_SOCIETY_EMERGENCE.md  Makefile  Makefile.proto  PHASE_1_COMPLETION_SUMMARY.md  PROGRESS_2025_01_17.md  QUICK_START_MACHINE2.md  READY_FOR_FEDERATION.md  SOCIETY_STATUS.md  SUCCESS.md  SYSTEM_STABILITY_ISSUE.md  TESTING_COMPLETION_REPORT.md  TRUST_GRAPH.md  WEB4_COMPLIANCE_REPORT.md  WEB4_COMPLIANCE_WORKPLAN.md  WEB4_IMPLEMENTATION.md  bootstrap_society.sh  config.yml  create_meta_society.sh  create_society_lcts.sh  create_trust_relationships.sh  energy-cycle-module-scaffolding-script.sh  execute_r6_action.sh  federation_instructions.md  fix-imports.sh  genesis_for_federation.json  genesis_task.json  go.mod  (+27 more)
implementation/ledger/act-modules/: human-ui.html  mcp-server.json  model-ui.json
implementation/ledger/api-bridge/: Makefile  api_bridge_integration_test.go  api_bridge_unit_test.go  buf.gen.yaml  buf.yaml  config.yaml  go.mod  go.sum  privacy_focused_demo.py  test_blockchain_fix.sh  test_blockhain_fix.sh  test_event_system.bat  test_event_system.sh  test_event_system_wsl.sh
implementation/ledger/api-bridge/cmd/api-bridge/: main.go
implementation/ledger/api-bridge/cmd/debug-grpc-client/: main.go
implementation/ledger/api-bridge/cmd/debug-grpc-server/: main.go
implementation/ledger/api-bridge/cmd/simple-grpc-test/: main.go
implementation/ledger/api-bridge/cmd/test-grpc-client/: main.go
implementation/ledger/api-bridge/cpp-demo/: APIBridgeDemo.cpp  CMakeLists.txt  DemoUI.cpp  DemoUI.h  GRPCClient.cpp  GRPCClient.h  INTEGRATION_GUIDE.md  PROJECT_STRUCTURE.md  README.md  RESTClient.cpp  RESTClient.h  SUMMARY.md  build.bat  build.sh  config.json  test_simple.cpp
implementation/ledger/api-bridge/cpp-demo-windows-forms/: CMakeLists.txt  COMPARISON.md  ConfigManager.h  FILES_CREATED.md  LogManager.h  MainForm.cpp  MainForm.h  README.md  build.bat  config.json  main.cpp
implementation/ledger/api-bridge/internal/auth/: auth_service.go  auth_test.go  authorization.go  cache.go  grpc_interceptor.go  laravel_client.go  middleware.go  (+1 more)
implementation/ledger/api-bridge/proto/: api_bridge.pb.go  api_bridge.proto  api_bridge.swagger.json  api_bridge_grpc.pb.go
implementation/ledger/app/: app.go  app_config.go  sim_test.go
implementation/ledger/config/: genesis.json
implementation/ledger/docs/blockchain/: README.md  development-status.md
implementation/ledger/docs/static/: # Web4 Race Car Battery Management Syste.md  # Web4 Race Car Demo - Complete API Refe.md  API_REFERENCE_UPDATED.md  ENCRYPTED_COMMUNICATION_GUIDE.md  ENCRYPTION_API_QUICK_REFERENCE.md  openapi.yml
implementation/ledger/docs/testing/: README.md  TESTING_SUMMARY.md
implementation/ledger/examples/: encrypted_communication_demo.py  mock_mysql_demo.go  privacy_focused_demo.py
implementation/ledger/proto/act/: buf.yaml
implementation/ledger/scripts/: create_genesis_society.sh
implementation/ledger/society/config/: config.toml  node_key.json  priv_validator_key.json  write-file-atomic-7829614499556730448
implementation/ledger/society/data/: priv_validator_state.json
implementation/ledger/society/keyring-test/: act-society-treasury.info
implementation/ledger/swarm-memory/witness/: validator.jsonl
implementation/ledger/tests/: README_REAL_BLOCKCHAIN_TESTING.md
implementation/ledger/tests/scripts/: run_all_tests.sh  run_complete_test_suite.sh  run_current_tests.sh  run_real_blockchain_tests.sh  test_coverage.sh
implementation/ledger/testutil/keeper/: keeper.go
implementation/ledger/x/componentregistry/: TODO_WEB4.md  handler.go
implementation/ledger/x/energycycle/: TODO_WEB4.md  handler.go
implementation/ledger/x/lctmanager/: TODO_WEB4.md  handler.go
implementation/ledger/x/pairingqueue/: TODO_WEB4.md  handler.go
implementation/ledger/x/trusttensor/: TODO_WEB4.md  handler.go
implementation/society-prototype/: READINESS_ECONOMY.md
machines/: WSL2-context.md
philosophy/: reality-alignment-and-learning.md  roles-as-attention-partitioning.md  synthon-memory-awareness.md
society/config/: config.toml
society/keyring-test/: society1-federation.info
swarm-bootstrap/: ACT_SWARM_ARCHITECTURE.md  BLOCKCHAIN_BUILD_PLAN.md  PROGRESS_ASSESSMENT.md  PROGRESS_ASSESSMENT_V2.md  README.md  WEB4_COMPLIANCE_QUEEN.md  WEB4_COMPLIANT_ARCHITECTURE.md  activate-compliance-check.js  execute-atp-infrastructure-swarm.js  execute-blockchain-build-swarm.js  execute-blockchain-swarm.js  execute-cosmos-ledger.js  execute-keeper-swarm.js  execute-protobuf-swarm.js  execute-swarm.js  execute-veracity-aware-blockchain-swarm.js  genesis-queen-init.js  launch-swarm.sh  monitor-swarm.js  swarm-atp-tracker.js  swarm-cli.sh  swarm-config.json  swarm-validator-agent.js  swarm-veracity-agent.js
swarm-bootstrap/queens/: reality-alignment-queen.json  web4-alignment-queen.json  web4-compliance-queen.json
swarm-bootstrap/swarm-memory/: consolidated-atp-report.json
swarm-bootstrap/swarm-memory/economy/: atp-ledger.json
swarm-bootstrap/swarm-memory/implementation/: agent-plan.ts  binding.ts  lct-token.ts  progress.json
swarm-bootstrap/swarm-memory/implementation/ledger/: WEB4_COMPLIANCE_WORKPLAN.md  law-oracle.ts  web4-blockchain.ts  web4-compliance-checker.ts
swarm-bootstrap/swarm-memory/tasks/: atp-infrastructure-1758180198949.json
swarm-bootstrap/swarm-memory/witness/: activity.jsonl  blockchain-build.jsonl  blockchain-deploy.jsonl  veracity-aware.jsonl  veracity.jsonl
(+358 files in other folders)
